Add the requested changes for the benefit bundle

--- a/src/app/features/benefits-bundle/benefits-bundle.component.html
+++ b/src/app/features/benefits-bundle/benefits-bundle.component.html
@@ -58,10 +58,10 @@
       <app-benefit-accordion [benefit]="benefits[3]" [index]="3" (toggleEmitter)="toggleAccordion(3)">
         <p>
           These seminars from Skills for Care offer learning on a range of topics. They can be tailored to your needs
-          delivered directly to your organisation. Claim 10% off with your ASC-WDS workplace ID.
+          and delivered directly to your organisation. Claim 10% off with your ASC-WDS workplace ID.
         </p>
         <p>
-          <a [routerLink]="['tailored-seminars']">Read more about the Tailored seminars</a>
+          <a [routerLink]="['tailored-seminars']">Read more about these tailored seminars</a>
         </p>
       </app-benefit-accordion>
 
