--- a/src/app/features/create-account/user/username-password/username-password.component.html
+++ b/src/app/features/create-account/user/username-password/username-password.component.html
@@ -60,7 +60,7 @@
               data-testid="password"
             />
             <a
-              class="govuk-link govuk-link--no-visited-state govuk-!-margin-left-5"
+              class="govuk-body-m govuk-button--link govuk-link govuk-link--no-visited-state govuk-!-margin-left-5"
               (click)="togglePasswordShow($event)"
               role="button"
               href="#"
@@ -93,7 +93,7 @@
         </div>
       </fieldset>
 
-      <button type="submit" class="govuk-button">Continue</button>
+      <app-registration-submit-buttons [insideFlow]="insideFlow" [returnRoute]="flow"></app-registration-submit-buttons>
     </form>
   </div>
   <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
