feat(staffNumberAmendments): Added tests to registration and add-workplace total staff components. Began fixing backlinks

--- a/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
+++ b/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
@@ -36,7 +36,7 @@
           />
         </div>
       </fieldset>
-      <button class="govuk-button govuk-!-margin-top-3" type="submit">Continue</button>
+      <app-registration-submit-buttons [insideFlow]="insideFlow" [returnRoute]="flow"></app-registration-submit-buttons>
     </form>
   </div>
   <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
