feat(staffNumberAmendments): Deskcheck fixes

--- a/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
+++ b/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
@@ -15,7 +15,7 @@
         </p>
         <app-details [title]="appDetailTitle">
           <p>
-            You can enter an estimate to save time, but remember to update this number in ASC-WDS once your account has
+            You can enter an estimate to save time, but remember to update this number in ASC-WDS once this account has
             been validated by Skills for Care.
           </p>
         </app-details>
@@ -26,7 +26,7 @@
           </span>
 
           <input
-            class="govuk-input govuk-input--width-4"
+            class="govuk-input govuk-input--width-5"
             formControlName="totalStaff"
             id="totalStaff"
             name="totalStaff"
