--- a/src/app/shared/directives/create-workplace/select-main-service/select-main-service.component.html
+++ b/src/app/shared/directives/create-workplace/select-main-service/select-main-service.component.html
@@ -9,12 +9,12 @@
 <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+        <span class="govuk-caption-l">Workplace</span>
+        <h1 class="govuk-fieldset__heading">Select {{ isParent ? 'its' : 'your' }} main service</h1>
+      </legend>
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
         <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <span class="govuk-caption-l">Workplace</span>
-            <h1 class="govuk-fieldset__heading">Select {{ isParent ? 'its' : 'your' }} main service</h1>
-          </legend>
           <div *ngIf="displayIntro">
             <ng-container *ngIf="isRegulated">
               <ng-container *ngIf="isParent; else notParent">
@@ -102,20 +102,9 @@
               </ng-container>
             </div>
           </fieldset>
-          <div class="govuk-!-margin-top-7">
-            <ng-container *ngIf="isWorkPlaceUpdate; else workplaceAdd">
-              <app-workplace-submit-button
-                [return]="!!return"
-                (clicked)="setSubmitAction($event)"
-                [isExistingStaffRecord]="false"
-              ></app-workplace-submit-button>
-            </ng-container>
-            <ng-template #workplaceAdd>
-              <app-submit-exit-buttons [cta]="callToActionLabel"></app-submit-exit-buttons>
-            </ng-template>
-          </div>
         </fieldset>
       </div>
+      <app-registration-submit-buttons [insideFlow]="insideFlow" [returnRoute]="flow"></app-registration-submit-buttons>
     </div>
     <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
       <div class="govuk-util__float-right">
