--- a/src/app/shared/directives/create-workplace/select-main-service/select-main-service.component.html
+++ b/src/app/shared/directives/create-workplace/select-main-service/select-main-service.component.html
@@ -76,9 +76,7 @@
                   [attr.data-testid]="'workplaceServiceOther-' + service.id"
                 >
                   <div class="govuk-form-group govuk-!-margin-bottom-2">
-                    <label class="govuk-label" for="otherWorkplaceService-{{ service.id }}">
-                      Enter your other service
-                    </label>
+                    <label class="govuk-label" for="otherWorkplaceService-{{ service.id }}"> Service </label>
                     <span
                       id="otherWorkplaceService-error"
                       class="govuk-error-message"
