change form so error messages persist, get rid of overcapacity error message showing when it should not show

--- a/src/app/features/workplace/services-capacity/services-capacity.component.html
+++ b/src/app/features/workplace/services-capacity/services-capacity.component.html
@@ -29,7 +29,9 @@
                 <h2 class="govuk-fieldset__heading">{{ capacity.service }}</h2>
               </legend>
               <span
-                *ngIf="submitted && form.get(groupName).invalid"
+                *ngIf="
+                  submitted && form.get(groupName).invalid && this.capacityUtilisationValidator(form.get(groupName))
+                "
                 id="{{ groupName }}-error"
                 class="govuk-error-message"
               >
