workplace address related ui fixes

--- a/src/app/shared/components/select-workplace-dropdown-form/select-workplace-dropdown-form.component.html
+++ b/src/app/shared/components/select-workplace-dropdown-form/select-workplace-dropdown-form.component.html
@@ -1,6 +1,6 @@
 <div [formGroup]="form">
   <select
-    class="govuk-select"
+    class="govuk-select govuk-!-margin-left-0"
     [class.govuk-select--error]="submitted && form.get('workplace').errors"
     [formControlName]="'workplace'"
     id="workplace"
