--- a/src/app/shared/directives/create-workplace/is-this-your-workplace/is-this-your-workplace.component.html
+++ b/src/app/shared/directives/create-workplace/is-this-your-workplace/is-this-your-workplace.component.html
@@ -69,8 +69,8 @@
         <div class="govuk-!-margin-top-6">
           <app-details [title]="revealTitle">
             <p>
-              Call the ASC-WDS Support Team on <strong>0113 241 0969</strong> or <br />email
-              <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
+              Call the ASC-WDS Support Team on <strong>0113 241 0969</strong><br />
+              or email <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
             </p>
           </app-details>
         </div>
