--- a/src/app/features/add-workplace/workplace-added-thank-you/workplace-added-thank-you.component.html
+++ b/src/app/features/add-workplace/workplace-added-thank-you/workplace-added-thank-you.component.html
@@ -17,7 +17,7 @@
 
     <app-details [title]="'Contact us if you have any questions'">
       <p>
-        Call the ASC-WDS Support Team on <strong>0113 241 0969</strong> or email
+        Call the ASC-WDS Support Team on <strong>0113 241 0969</strong> <br />or email
         <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
       </p>
     </app-details>
