workflow progress bar alignment fix

--- a/src/app/shared/directives/create-workplace/find-your-workplace/find-your-workplace.component.html
+++ b/src/app/shared/directives/create-workplace/find-your-workplace/find-your-workplace.component.html
@@ -46,7 +46,7 @@
     </form>
   </div>
   <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
-    <div class="govuk-util__float-right">
+    <div class="govuk-!-margin-left-8">
       <app-progress-bar
         data-testid="progress-bar-1"
         [header]="'Workplace'"
