--- a/src/app/shared/directives/create-workplace/select-main-service/select-main-service.component.html
+++ b/src/app/shared/directives/create-workplace/select-main-service/select-main-service.component.html
@@ -105,7 +105,7 @@
       <app-registration-submit-buttons [insideFlow]="insideFlow" [returnRoute]="flow"></app-registration-submit-buttons>
     </div>
     <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
-      <div class="govuk-util__float-right">
+      <div class="govuk-!-margin-left-8">
         <app-progress-bar
           data-testid="progress-bar-1"
           [header]="'Workplace'"
