--- a/src/app/shared/directives/create-workplace/new-regulated-by-cqc/regulated-by-cqc.component.html
+++ b/src/app/shared/directives/create-workplace/new-regulated-by-cqc/regulated-by-cqc.component.html
@@ -6,14 +6,12 @@
       <fieldset class="govuk-fieldset">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <span class="govuk-caption-l">Workplace</span>
-          <h1 class="govuk-fieldset__heading">
-            {{title}} regulated by the Care Quality Commission?
-          </h1>
+          <h1 class="govuk-fieldset__heading">{{ title }} regulated by the Care Quality Commission?</h1>
         </legend>
         <app-details [title]="'Not sure if your main service is regulated?'">
           <p>
-            Call the ASC-WDS Support Team on <strong>0113 241 0969</strong>
-          <br> or email <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
+            Call the ASC-WDS Support Team on <strong>0113 241 0969</strong> <br />
+            or email <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
           </p>
         </app-details>
         <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
@@ -55,7 +53,7 @@
     </form>
   </div>
   <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
-    <div class="govuk-util__float-right">
+    <div class="govuk-!-margin-left-8">
       <app-progress-bar
         data-testid="progress-bar-1"
         [header]="'Workplace'"
