--- a/src/app/features/add-workplace/confirm-workplace-details/confirm-workplace-details.component.html
+++ b/src/app/features/add-workplace/confirm-workplace-details/confirm-workplace-details.component.html
@@ -1,8 +1,10 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full-from-desktop">
-    <h1 class="govuk-heading-l">Check these details before you submit them</h1>
+    <span class="govuk-caption-l">Summary</span>
+    <h1 class="govuk-heading-l">{{ locationAddress.locationName }}</h1>
 
-    <div class="govuk-!-margin-bottom-7">
+    <p>Check these details before you submit them.</p>
+    <div class="govuk-!-margin-bottom-7 govuk-!-margin-top-6">
       <p class="govuk-heading-m">Workplace</p>
 
       <app-summary-list
