fixed button spacing on confirmation page

--- a/src/app/features/add-workplace/confirm-workplace-details/confirm-workplace-details.component.html
+++ b/src/app/features/add-workplace/confirm-workplace-details/confirm-workplace-details.component.html
@@ -4,7 +4,7 @@
     <h1 class="govuk-heading-l">{{ locationAddress.locationName }}</h1>
 
     <p>Check these details before you submit them.</p>
-    <div class="govuk-!-margin-bottom-7 govuk-!-margin-top-6">
+    <div class="govuk-!-margin-top-6">
       <p class="govuk-heading-m">Workplace</p>
 
       <app-summary-list
@@ -36,6 +36,6 @@
       ></app-summary-list>
     </div>
 
-    <button type="button" class="govuk-button govuk-!-margin-top-7" (click)="continue()">Submit details</button>
+    <button type="button" class="govuk-button govuk-!-margin-top-8" (click)="continue()">Submit details</button>
   </div>
 </div>
