--- a/src/app/features/create-account/workplace/thank-you/thank-you.component.html
+++ b/src/app/features/create-account/workplace/thank-you/thank-you.component.html
@@ -10,8 +10,8 @@
 
     <app-details [title]="'Contact us if you have any questions'">
       <p>
-        Call the ASC-WDS Support Team on <strong>0113 241 0969</strong> or email
-        <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
+        Call the ASC-WDS Support Team on <strong>0113 241 0969</strong> <br />
+        or email <strong>ascwds-support@skillsforcare.org.uk</strong> for help.
       </p>
     </app-details>
   </div>
