--- a/src/app/features/workers/total-staff-change/total-staff-change.component.html
+++ b/src/app/features/workers/total-staff-change/total-staff-change.component.html
@@ -1,13 +1,18 @@
 <app-error-summary *ngIf="submitted && form.invalid" [formErrorsMap]="formErrorsMap" [form]="form"></app-error-summary>
 
 <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
-  <app-total-staff
-    [establishmentUid]="workplace.uid"
-    [form]="form"
-    [formErrorsMap]="formErrorsMap"
-    [submitted]="submitted"
-    [errorSummaryService]="errorSummaryService">
-  </app-total-staff>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds-from-desktop">
+      <app-total-staff
+        [establishmentUid]="workplace.uid"
+        [form]="form"
+        [formErrorsMap]="formErrorsMap"
+        [submitted]="submitted"
+        [errorSummaryService]="errorSummaryService"
+      >
+      </app-total-staff>
+    </div>
+  </div>
 
   <div class="govuk-button-group">
     <button type="submit" class="govuk-button">
