--- a/src/app/features/workplace/total-staff-question/total-staff-question.component.html
+++ b/src/app/features/workplace/total-staff-question/total-staff-question.component.html
@@ -1,14 +1,18 @@
 <app-error-summary *ngIf="submitted && form.invalid" [formErrorsMap]="formErrorsMap" [form]="form"></app-error-summary>
 
 <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
-  <app-total-staff
-    [establishmentUid]="establishment.uid"
-    [form]="form"
-    [formErrorsMap]="formErrorsMap"
-    [submitted]="submitted"
-    [errorSummaryService]="errorSummaryService"
-  >
-  </app-total-staff>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds-from-desktop">
+      <app-total-staff
+        [establishmentUid]="establishment.uid"
+        [form]="form"
+        [formErrorsMap]="formErrorsMap"
+        [submitted]="submitted"
+        [errorSummaryService]="errorSummaryService"
+      >
+      </app-total-staff>
+    </div>
+  </div>
 
   <app-workplace-submit-button [return]="!!return" (clicked)="setSubmitAction($event)"></app-workplace-submit-button>
 </form>
