--- a/src/app/shared/components/total-staff/total-staff.component.html
+++ b/src/app/shared/components/total-staff/total-staff.component.html
@@ -7,17 +7,7 @@
     The number should include all staff (care-providing and none care-providing, those on permanent or temporary
     contracts, pool, bank and agency workers).
   </p>
-  <!-- <app-details [title]="appDetailTitle">
-    <p>
-      You can enter an estimate to save time, but remember to update this number in ASC-WDS once this account has been
-      validated by Skills for Care.
-    </p>
-  </app-details> -->
-  <div
-    class="govuk-form-group"
-    [formGroup]="form"
-    [class.govuk-form-group--error]="submitted && (form.invalid || serverError)"
-  >
+  <div class="govuk-form-group" [formGroup]="form" [class.govuk-form-group--error]="submitted && form.invalid">
     <label class="govuk-label" for="totalStaff"> Number of staff</label>
     <span *ngIf="submitted && form.get('totalStaff').invalid" id="totalStaff-error" class="govuk-error-message">
       <span class="govuk-visually-hidden">Error:</span> {{ getErrorMessage('totalStaff') }}
