--- a/src/app/shared/components/workplace-submit-button/workplace-submit-button.component.html
+++ b/src/app/shared/components/workplace-submit-button/workplace-submit-button.component.html
@@ -1,7 +1,7 @@
 <div
   class="govuk-button-group govuk__align-items-unset"
   data-testid="button-container"
-  [ngClass]="{ 'govuk-!-margin-top-2': reducedMargin }"
+  [ngClass]="{ 'govuk-!-margin-top-2': reducedMargin, 'govuk-!-margin-top-4': marginTop4 }"
 >
   <ng-container *ngIf="!return; else summary">
     <div>
