feat(staffRecordInitialViewAmendments): Removed punctuation

--- a/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
+++ b/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
@@ -42,9 +42,9 @@
 </ng-container>
 
 <ng-template #noStaffRecords>
-  <app-inset-text color="warning" [removeTopMargin]="true">Start to add your staff records.</app-inset-text>
+  <app-inset-text color="warning" [removeTopMargin]="true">Start to add your staff records</app-inset-text>
 
-  <p>To add a staff record, you need to know that person’s:</p>
+  <p>To add a staff record you need to know that person’s:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>name or ID number</li>
     <li>main job role</li>
