--- a/src/app/features/workplace/regulated-by-cqc/regulated-by-cqc.component.html
+++ b/src/app/features/workplace/regulated-by-cqc/regulated-by-cqc.component.html
@@ -7,69 +7,71 @@
 </app-error-summary>
 
 <div class="govuk-grid-row">
-  <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
-    <fieldset class="govuk-fieldset">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h1 class="govuk-fieldset__heading">Enter the postcode or location ID</h1>
-      </legend>
+  <div class="govuk-grid-column-two-thirds-from-desktop">
+    <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
+      <fieldset class="govuk-fieldset">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <span class="govuk-caption-l">Workplace</span>
+          <h1 class="govuk-fieldset__heading">Enter the postcode or location ID</h1>
+        </legend>
 
-      <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && (form.invalid || serverError)">
-        <span *ngIf="submitted" id="regulated-error" class="govuk-error-message">
-          <span *ngIf="regulatedByCQC.errors" id="regulatedByCQC-error">{{
-            getFirstErrorMessage('regulatedByCQC')
-          }}</span>
-          <span *ngIf="group.errors" id="group-error"> {{ getFirstErrorMessage('group') }}</span>
-        </span>
+        <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && (form.invalid || serverError)">
+          <span *ngIf="submitted" id="regulated-error" class="govuk-error-message">
+            <span *ngIf="regulatedByCQC.errors" id="regulatedByCQC-error">{{
+              getFirstErrorMessage('regulatedByCQC')
+            }}</span>
+            <span *ngIf="group.errors" id="group-error"> {{ getFirstErrorMessage('group') }}</span>
+          </span>
 
-        <!-- group & conditional content -->
-        <div id="regulatedByCQC-conditional-1" [formGroupName]="'group'">
-          <div id="group-error">
-            <!-- regulated postcode -->
-            <div class="govuk-form-group govuk-!-margin-bottom-2">
-              <label class="govuk-label" for="regulatedPostcode"> Enter your postcode </label>
-              <span
-                id="group-regulatedPostcode-error"
-                class="govuk-error-message"
-                *ngIf="submitted && regulatedPostcode.errors"
-              >
-                <span class="govuk-visually-hidden">Error:</span>
-                {{ getFirstErrorMessage('group.regulatedPostcode') }}
-              </span>
-              <input
-                class="govuk-input govuk-!-width-one-third"
-                id="regulatedPostcode"
-                name="regulatedPostcode"
-                type="text"
-                [formControlName]="'regulatedPostcode'"
-                [class.govuk-input--error]="submitted && (regulatedPostcode.errors || group.errors)"
-                spellcheck="false"
-              />
-            </div>
+          <div id="regulatedByCQC-conditional-1" [formGroupName]="'group'">
+            <div id="group-error">
+              <div class="govuk-form-group govuk-!-margin-bottom-2">
+                <label class="govuk-label" for="regulatedPostcode"> Enter your postcode </label>
+                <span
+                  id="group-regulatedPostcode-error"
+                  class="govuk-error-message"
+                  *ngIf="submitted && regulatedPostcode.errors"
+                >
+                  <span class="govuk-visually-hidden">Error:</span>
+                  {{ getFirstErrorMessage('group.regulatedPostcode') }}
+                </span>
+                <input
+                  class="govuk-input govuk-!-width-one-third"
+                  id="regulatedPostcode"
+                  name="regulatedPostcode"
+                  type="text"
+                  [formControlName]="'regulatedPostcode'"
+                  [class.govuk-input--error]="submitted && (regulatedPostcode.errors || group.errors)"
+                  spellcheck="false"
+                />
+              </div>
 
-            <!-- divider -->
-            <div class="govuk-radios__divider govuk-!-margin-top-4">or</div>
+              <div class="govuk-radios__divider govuk-!-margin-top-4">or</div>
 
-            <!-- location Id -->
-            <div class="govuk-form-group">
-              <label class="govuk-label" for="locationId"> Enter your location ID number </label>
-              <span id="group-locationId-error" class="govuk-error-message" *ngIf="submitted && locationId.errors">
-                <span class="govuk-visually-hidden">Error:</span>
-                {{ getFirstErrorMessage('group.locationId') }}
-              </span>
-              <input
-                class="govuk-input govuk-!-width-one-third"
-                id="locationId"
-                name="locationId"
-                type="text"
-                [formControlName]="'locationId'"
-                [class.govuk-input--error]="submitted && (locationId.errors || group.errors)"
-                spellcheck="false"
-              />
+              <div class="govuk-form-group">
+                <label class="govuk-label" for="locationId"> Enter your location ID number </label>
+                <span id="group-locationId-error" class="govuk-error-message" *ngIf="submitted && locationId.errors">
+                  <span class="govuk-visually-hidden">Error:</span>
+                  {{ getFirstErrorMessage('group.locationId') }}
+                </span>
+                <input
+                  class="govuk-input govuk-!-width-one-third"
+                  id="locationId"
+                  name="locationId"
+                  type="text"
+                  [formControlName]="'locationId'"
+                  [class.govuk-input--error]="submitted && (locationId.errors || group.errors)"
+                  spellcheck="false"
+                />
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </fieldset>
-    <app-workplace-continue-cancel-button (clicked)="navigateAction($event)"></app-workplace-continue-cancel-button>
-  </form>
+      </fieldset>
+      <app-workplace-continue-cancel-button
+        (clicked)="navigateAction($event)"
+        [marginTop4]="true"
+      ></app-workplace-continue-cancel-button>
+    </form>
+  </div>
 </div>
