feat(staffRecordInitialViewAmendments): Made minor text changes as a result of deskcheck

--- a/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
+++ b/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
@@ -44,7 +44,7 @@
 <ng-template #noStaffRecords>
   <app-inset-text color="warning" [removeTopMargin]="true">Start to add your staff records</app-inset-text>
 
-  <p>To add a staff record you need to know that person’s:</p>
+  <p>To add a staff record you need to know the person’s:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>name or ID number</li>
     <li>main job role</li>
@@ -58,7 +58,7 @@
   <p>You'll be asked about that person's:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>personal details, like their date of birth and National Insurance number</li>
-    <li>employment details like when they started their main job roles</li>
+    <li>employment details, like when they started their main job role</li>
     <li>training and qualifications</li>
   </ul>
 </ng-template>
