change spacing and add detail text to total staff, add services subheading to select main service page when accessed from workplace tab

--- a/src/app/features/workplace/total-staff-question/total-staff-question.component.html
+++ b/src/app/features/workplace/total-staff-question/total-staff-question.component.html
@@ -15,6 +15,7 @@
       <app-workplace-submit-button
         [return]="!!return"
         (clicked)="setSubmitAction($event)"
+        [marginTop4]="true"
       ></app-workplace-submit-button>
     </form>
   </div>
