feat(snaggingListCreateAccountV2): Fixed a typo and changed type of employer header so it will no longer display the workplaceName on create-account

--- a/src/app/features/create-account/workplace/confirm-details/confirm-details.component.html
+++ b/src/app/features/create-account/workplace/confirm-details/confirm-details.component.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="govuk-!-margin-bottom-7">
-  <p>Check your details before you submit them.</p>
+  <p>Check these details before you submit them.</p>
 </div>
 
 <app-confirm-workplace-details></app-confirm-workplace-details>
