amended text on other services page, updated service in db

--- a/src/app/features/workplace/other-services/other-services.component.html
+++ b/src/app/features/workplace/other-services/other-services.component.html
@@ -86,9 +86,7 @@
                             id="otherServices-conditional-{{ i }}"
                           >
                             <div class="govuk-form-group govuk-!-margin-bottom-2">
-                              <label class="govuk-label" for="additionalOtherService{{ service.id }}">
-                                Enter your other service
-                              </label>
+                              <label class="govuk-label" for="additionalOtherService{{ service.id }}"> Service </label>
                               <span
                                 id="additionalOtherService{{ service.id }}-error"
                                 class="govuk-error-message"
