--- a/src/app/features/workplace/services-capacity/services-capacity.component.html
+++ b/src/app/features/workplace/services-capacity/services-capacity.component.html
@@ -28,7 +28,7 @@
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
                 <h2 class="govuk-fieldset__heading">{{ capacity.service }}</h2>
               </legend>
-              <span
+              <!-- <span
                 *ngIf="
                   submitted && form.get(groupName).invalid && this.capacityUtilisationValidator(form.get(groupName))
                 "
@@ -37,7 +37,7 @@
               >
                 <span class="govuk-visually-hidden">Error:</span>
                 {{ getFormErrorMessage(groupName, 'overcapacity') }}
-              </span>
+              </span> -->
               <ng-container *ngFor="let question of capacity.questions; let idx = index">
                 <div
                   class="govuk-form-group"
@@ -55,6 +55,14 @@
                     <span class="govuk-visually-hidden">Error:</span>
                     {{ getFirstErrorMessage(groupName + '.' + controlName) }}
                   </span>
+                  <!-- <span
+                    *ngIf="submitted && form.get(groupName).get(controlName).invalid"
+                    id="{{ groupName }}-{{ controlName }}-error"
+                    class="govuk-error-message"
+                  >
+                    <span class="govuk-visually-hidden">Error:</span>
+                    {{ getFormErrorMessage(groupName + '.' + controlName, 'required') }}
+                  </span> -->
                   <input
                     class="govuk-input govuk-input--width-4"
                     [class.govuk-input--error]="submitted && form.get(groupName).get(controlName).invalid"
