Added basicTitle back in

--- a/src/app/features/workers/staff-record/staff-record.component.html
+++ b/src/app/features/workers/staff-record/staff-record.component.html
@@ -97,7 +97,7 @@
       </div>
     </ng-template>
   </div>
-  <app-basic-record [workplace]="workplace" [worker]="worker"></app-basic-record>
+  <app-basic-record [basicTitle]="'Mandatory information'" [workplace]="workplace" [worker]="worker"></app-basic-record>
   <app-personal-details [workplace]="workplace" [worker]="worker"></app-personal-details>
   <app-employment [workplace]="workplace" [worker]="worker"></app-employment>
   <app-qualifications-and-training [workplace]="workplace" [worker]="worker"> </app-qualifications-and-training>
