--- a/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
+++ b/src/app/shared/components/staff-record-summary/basic-record/basic-record.component.html
@@ -1,8 +1,8 @@
 <h2 class="govuk-heading-m">{{ basicTitle }}</h2>
 <dl class="govuk-summary-list govuk-summary-list--no-border asc-summarylist-border-top asc-summarylist-border-bottom">
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">Name or ID number</dt>
-    <dd class="govuk-summary-list__value">
+    <dt class="govuk-summary-list__key govuk-!-padding-right-0">Name or ID number</dt>
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       {{ worker.nameOrId }}
     </dd>
     <dd *ngIf="canEditWorker" class="govuk-summary-list__actions">
@@ -15,8 +15,8 @@
   </div>
 
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">Main job role</dt>
-    <dd class="govuk-summary-list__value">
+    <dt class="govuk-summary-list__key govuk-!-padding-right-0">Main job role</dt>
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       <app-summary-record-value
         [wdfView]="wdfView"
         [wdfValue]="worker.wdf?.mainJob"
@@ -52,8 +52,8 @@
   </div>
 
   <div class="govuk-summary-list__row">
-    <dt class="govuk-summary-list__key">Contract type</dt>
-    <dd class="govuk-summary-list__value">
+    <dt class="govuk-summary-list__key govuk-!-padding-right-0">Contract type</dt>
+    <dd class="govuk-summary-list__value govuk-!-padding-left-8">
       <app-summary-record-value
         [wdfView]="wdfView"
         [wdfValue]="worker.wdf?.contract"
