--- a/src/app/shared/components/submit-button/submit-button.component.html
+++ b/src/app/shared/components/submit-button/submit-button.component.html
@@ -1,19 +1,28 @@
 <div class="govuk-button-group govuk__align-items-unset">
   <ng-container *ngIf="!return; else summary">
+    <div class="govuk-grid-column-two-thirds govuk__flex govuk-!-padding-left-0">
+      <div>
+        <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onClick($event, 'continue', true)">
+          {{ callToAction }}
+        </button>
+      </div>
+
+      <div *ngIf="recordSummary" class="govuk-!-margin-left-9">
+        <span class="govuk-visually-hidden">or</span>
+        <a class="govuk-button govuk-button--link" (click)="onClick($event, 'skip', false)">Skip this question</a>
+      </div>
+      <div *ngIf="canExit" class="govuk-!-margin-left-9">
+        <span class="govuk-visually-hidden">or</span>
+        <a class="govuk-button govuk-button--link" (click)="onClick($event, 'exit', false)">{{ exitText }}</a>
+      </div>
+    </div>
     <div>
-      <button type="submit" class="govuk-button govuk-!-margin-right-9" (click)="onClick($event, 'continue', true)">
-        {{ callToAction }}
-      </button>
-    </div>
-    <div *ngIf="recordSummary" class="govuk-!-margin-left-9 govuk-!-margin-right-9">
-      <span class="govuk-visually-hidden">or</span>
-      <a class="govuk-button govuk-button--link" (click)="onClick($event, 'summary', false)"
-        >View {{ isExistingStaffRecord ? 'this staff record' : 'workplace details' }}</a
-      >
-    </div>
-    <div *ngIf="canExit" class="govuk-!-margin-left-9 govuk-!-margin-right-9">
-      <span class="govuk-visually-hidden">or</span>
-      <a class="govuk-button govuk-button--link" (click)="onClick($event, 'exit', false)">{{ exitText }}</a>
+      <div class="govuk-!-margin-left-8" *ngIf="recordSummary">
+        <span class="govuk-visually-hidden">or</span>
+        <a class="govuk-button govuk-button--link" (click)="onClick($event, 'summary', false)"
+          >View this staff record</a
+        >
+      </div>
     </div>
   </ng-container>
   <ng-template #summary>
