Fixed failing tests

--- a/src/app/features/workers/national-insurance-number/national-insurance-number.component.html
+++ b/src/app/features/workers/national-insurance-number/national-insurance-number.component.html
@@ -32,6 +32,7 @@
             name="nationalInsuranceNumber"
             type="text"
             spellcheck="false"
+            data-testid="ni-input"
           />
         </div>
       </div>
