Desk check changes

--- a/src/app/features/workers/national-insurance-number/national-insurance-number.component.html
+++ b/src/app/features/workers/national-insurance-number/national-insurance-number.component.html
@@ -9,21 +9,22 @@
       >
         <h1 class="govuk-label-wrapper">
           <span class="govuk-caption-l">Personal details</span>
-          <label class="govuk-label govuk-label--xl govuk-!-margin-bottom-8" for="nationalInsuranceNumber">
+          <label class="govuk-label govuk-label--l govuk-!-margin-bottom-8" for="nationalInsuranceNumber">
             What's their National Insurance number?
           </label>
         </h1>
-        <span
-          *ngIf="submitted && form.get('nationalInsuranceNumber').errors"
-          id="nationalInsuranceNumber-error"
-          class="govuk-error-message"
-        >
-          <span class="govuk-visually-hidden">Error:</span>
-          {{ getFormErrorMessage('nationalInsuranceNumber', 'validNin') }}
-        </span>
-        <label class="govuk-label govuk-date-input__label" for="dob-year"> National Insurance Number </label>
+
+        <label class="govuk-label govuk-date-input__label" for="dob-year"> National Insurance number </label>
         <span class="govuk-caption-m govuk-!-margin-bottom-4">For example, 'QQ 12 34 56 C'</span>
         <div>
+          <span
+            *ngIf="submitted && form.get('nationalInsuranceNumber').errors"
+            id="nationalInsuranceNumber-error"
+            class="govuk-error-message"
+          >
+            <span class="govuk-visually-hidden">Error:</span>
+            {{ getFormErrorMessage('nationalInsuranceNumber', 'validNin') }}
+          </span>
           <input
             class="govuk-input govuk-input--width-10"
             [class.govuk-input--error]="submitted && form.get('nationalInsuranceNumber').invalid"
@@ -48,5 +49,5 @@
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="onSubmit($event)"></app-submit-button>
 </form>
