feat(createStaffRecordAmendments): Changed Pool/Bank to Pool, Bank on frontend

--- a/src/app/features/workers/staff-details/staff-details.component.html
+++ b/src/app/features/workers/staff-details/staff-details.component.html
@@ -102,10 +102,10 @@
                   id="contract-{{ idx }}"
                   name="contract"
                   type="radio"
-                  [value]="contract"
+                  [value]="contract.value"
                 />
                 <label class="govuk-label govuk-radios__label" for="contract-{{ idx }}">
-                  {{ contract }}
+                  {{ contract.tag }}
                 </label>
               </div>
             </div>
