add establishment class to each component extending question component, get navigation for date of birth working

--- a/src/app/features/workers/date-of-birth/date-of-birth.component.html
+++ b/src/app/features/workers/date-of-birth/date-of-birth.component.html
@@ -30,7 +30,7 @@
         </div>
       </fieldset>
     </div>
-    <div class="govuk-grid-column-one-third">
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
       <app-progress-bar
         data-testid="progress-bar"
         [sections]="staffRecordSections"
