--- a/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
+++ b/src/app/shared/components/staff-records-tab/staff-records-tab.component.html
@@ -7,6 +7,7 @@
       role="button"
       draggable="false"
       class="govuk-button"
+      (click)="addStaffRecordInProgress($event)"
       [routerLink]="['/workplace', this.workplace.uid, 'staff-record', 'create-staff-record']"
     >
       Add a staff record
