--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -59,7 +59,7 @@
             workplace.uid,
             'staff-record',
             worker.uid,
-            worker.mainJob?.jobId === 27 ? 'mental-health-professional' : 'main-job-start-date'
+            worker.mainJob?.jobId === 27 ? 'mental-health-professional' : 'date-of-birth'
           ]"
           [state]="{ navigatedFrom: 'staff-records' }"
           >Add more details <span class="govuk-visually-hidden"> for {{ worker.nameOrId }}</span></a
