--- a/src/app/features/workers/home-postcode/home-postcode.component.html
+++ b/src/app/features/workers/home-postcode/home-postcode.component.html
@@ -3,7 +3,10 @@
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('postcode').invalid">
+      <div
+        class="govuk-form-group govuk-!-margin-bottom-4"
+        [class.govuk-form-group--error]="submitted && form.get('postcode').invalid"
+      >
         <h1 class="govuk-label-wrapper">
           <span class="govuk-caption-l">Personal details</span>
           <label class="govuk-label govuk-label--l govuk-!-margin-bottom-8" for="postcode">
