--- a/src/app/features/workers/disability/disability.component.html
+++ b/src/app/features/workers/disability/disability.component.html
@@ -6,9 +6,8 @@
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('disability').invalid">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-            <h1 class="govuk-fieldset__heading">
-              Do they identify as having a disability?
-            </h1>
+            <span class="govuk-caption-l">Personal details</span>
+            <h1 class="govuk-fieldset__heading">Do they identify as having a disability?</h1>
           </legend>
           <div class="govuk-radios">
             <div *ngFor="let answer of answersAvailable; let idx = index" class="govuk-radios__item">
@@ -26,6 +25,15 @@
             </div>
           </div>
         </fieldset>
+      </div>
+    </div>
+    <div class="govuk-grid-column-one-third">
+      <div class="govuk-!-margin-left-8">
+        <app-progress-bar
+          data-testid="progress-bar"
+          [sections]="staffRecordSections"
+          [currentSection]="'Personal details'"
+        ></app-progress-bar>
       </div>
     </div>
   </div>
