feat(genderIdentityAmendments): Changed frontend to use tags and values for frontend display

--- a/src/app/features/workers/gender/gender.component.html
+++ b/src/app/features/workers/gender/gender.component.html
@@ -20,10 +20,10 @@
                 id="gender-{{ idx }}"
                 name="gender"
                 type="radio"
-                [value]="answer"
+                [value]="answer.value"
               />
               <label class="govuk-label govuk-radios__label" for="gender-{{ idx }}">
-                {{ answer }}
+                {{ answer.tag }}
               </label>
             </div>
           </div>
