--- a/src/app/features/workers/disability/disability.component.html
+++ b/src/app/features/workers/disability/disability.component.html
@@ -27,7 +27,7 @@
         </fieldset>
       </div>
     </div>
-    <div class="govuk-grid-column-one-third">
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
       <div class="govuk-!-margin-left-8">
         <app-progress-bar
           data-testid="progress-bar"
