--- a/src/app/features/workers/british-citizenship/british-citizenship.component.html
+++ b/src/app/features/workers/british-citizenship/british-citizenship.component.html
@@ -8,10 +8,9 @@
         [class.govuk-form-group--error]="submitted && form.get('britishCitizenship').invalid"
       >
         <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-            <h1 class="govuk-fieldset__heading">
-              Do they have British citizenship?
-            </h1>
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
+            <h1 class="govuk-fieldset__heading">Do they have British citizenship?</h1>
           </legend>
           <div class="govuk-radios">
             <div *ngFor="let answer of answersAvailable; let idx = index" class="govuk-radios__item">
@@ -21,14 +20,23 @@
                 id="britishCitizenship-{{ idx }}"
                 name="britishCitizenship"
                 type="radio"
-                [value]="answer"
+                [value]="answer.value"
               />
               <label class="govuk-label govuk-radios__label" for="britishCitizenship-{{ idx }}">
-                {{ answer }}
+                {{ answer.tag }}
               </label>
             </div>
           </div>
         </fieldset>
+      </div>
+    </div>
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+      <div class="govuk-!-margin-left-8">
+        <app-progress-bar
+          data-testid="progress-bar-1"
+          [sections]="staffRecordSections"
+          [currentSection]="section"
+        ></app-progress-bar>
       </div>
     </div>
   </div>
