--- a/src/app/features/workers/nationality/nationality.component.html
+++ b/src/app/features/workers/nationality/nationality.component.html
@@ -3,11 +3,12 @@
 <form #formEl (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-            <h1 class="govuk-fieldset__heading">What's their nationality?</h1>
-          </legend>
+      <fieldset class="govuk-fieldset">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
+          <h1 class="govuk-fieldset__heading">What's their nationality?</h1>
+        </legend>
+        <div class="govuk-form-group">
           <div class="govuk-radios govuk-radios--conditional">
             <div class="govuk-radios__item">
               <input
@@ -70,10 +71,19 @@
               <label class="govuk-label govuk-radios__label" for="nationalityKnown-3"> Don't know </label>
             </div>
           </div>
-        </fieldset>
+        </div>
+      </fieldset>
+    </div>
+    <div class="govuk-grid-column-one-third" *ngIf="insideFlow">
+      <div class="govuk-!-margin-left-8">
+        <app-progress-bar
+          data-testid="progress-bar"
+          [sections]="staffRecordSections"
+          [currentSection]="section"
+        ></app-progress-bar>
       </div>
     </div>
   </div>
 
-  <app-submit-button [return]="!!return" (clicked)="onSubmit($event)"></app-submit-button>
+  <app-submit-button [return]="!insideFlow" (clicked)="onSubmit($event)"></app-submit-button>
 </form>
