Add the changes for the disability text

--- a/src/app/features/workers/disability/disability.component.html
+++ b/src/app/features/workers/disability/disability.component.html
@@ -17,10 +17,10 @@
                 id="disability-{{ idx }}"
                 name="disability"
                 type="radio"
-                [value]="answer"
+                [value]="answer.value"
               />
               <label class="govuk-label govuk-radios__label" for="disability-{{ idx }}">
-                {{ answer }}
+                {{ answer.tag }}
               </label>
             </div>
           </div>
